--- a/TodoApp/wwwroot/style.css
+++ b/TodoApp/wwwroot/style.css
@@ -47,3 +47,12 @@ footer {
   min-width: 100%;
   padding: 1rem 2rem;
 }
+
+/* Todo List */
+.todoes {}
+
+.todo-card {}
+
+.complete {
+  background-color: green;
+}
