--- a/TodoApp/wwwroot/style.css
+++ b/TodoApp/wwwroot/style.css
@@ -47,6 +47,11 @@ footer {
   min-width: 100%;
   padding: 1rem 2rem;
 }
+/* Form */
+#todoForm {
+  display: flex;
+  margin-bottom: 1rem;
+}
 
 /* Todo List */
 .todoes {}
